--- a/src/input.css
+++ b/src/input.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre&display=swap');
 
 .font{
-    font-family: 'Playfair Display', serif;
+    font-family: 'Frank Ruhl Libre', serif;
 }
 
