--- a/src/input.css
+++ b/src/input.css
@@ -7,4 +7,72 @@
 .font{
     font-family: 'Frank Ruhl Libre', serif;
 }
+.text:nth-child(1) {
+    color: black;
+    font-family: 'Frank Ruhl Libre', serif;
+    font-weight: 800;
+    font-size: 20px;
+    margin: 0 0 0 35%;
+    text-align: left;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 170px;
+    animation: type 1s steps(40,end) forwards;
+  }
+  
+  .text:nth-child(2) {
+    opacity: 0;
+    font-family: 'Frank Ruhl Libre', serif;
+    margin: 0 auto auto auto;
+    background: linear-gradient(to right, #000000, #a9a9a9, #000000);
+    font-weight: 800;
+    /* font-size: 100px;   */
+    width: 280px;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    overflow: hidden;
+    animation: shring-animation 2.2s steps(40,end) 2s forwards, blink .5s step-end infinite alternate;
+  }
+  
+  @keyframes shring-animation {
+    0% {
+      background-position: 0 0;
+      opacity: 0;
+      width: 0;
+    }
+    1% {
+      background-position: 0 0;
+      opacity: 1;
+      border-right: 1px solid green;
+    }
+    50% {
+      background-position: 150px 0;
+      opacity: 1;
+      border-right: 1px solid green;
+    }
+    100% {
+      background-position: 400px 0;
+      opacity: 1;
+      border-right: 1px solid green;
+    }
+  }
+  
+  @keyframes type {
+    0% {
+      width: 0;
+    }
+    1%, 99%{
+      border-right: 1px solid green;
+    }
+    100%{
+      border-right: none;
+    }
+  }
+  
+  @keyframes blink {
+    50% {
+      border-color: transparent;
+    }
+  }
+  
 
